Remove margin from <body>.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Tetris</title>
     <script src="main.js"></script>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0;">
     <div id="app"></div>
     <script>
       var app = Elm.Main.init({
