--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Tetris</title>
+    <title>Elm Tetris</title>
     <script src="main.js"></script>
   </head>
   <body style="margin: 0; padding: 0;">
