Add footer (Help shortcut and source code link).

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Elm Tetris</title>
     <script src="main.js"></script>
   </head>
-  <body style="margin: 0; padding: 0;">
+  <body style="margin: 0; padding: 0; overflow-y: hidden;">
     <div id="app"></div>
     <script>
       var app = Elm.Main.init({
