--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>Elm Tetris</title>
     <script src="main.js"></script>
   </head>
